Added open source link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
         </div>
       </div>
     </div>
-
+    <p id="link-text">
+      Open source code
+      <a id="link" href="https://github.com/Kiki-etta/firstProjectApp"
+        >by Kiki-etta
+      </a>
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
