--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
       src="https://kit.fontawesome.com/cbd833b87c.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js" id="axios"></script>
   </head>
 
   <body>
     <div class="container">
       <div class="back">
-        <img src="src/illustration.png" width="300px" />
+        <h2 id="day-time">
+          Today, 13:45
+        </h2>
+        <img src="src/illustration.png" width="250px" />
 
         <h3 id="location">
           Amsterdam
@@ -39,7 +41,7 @@
 
             <br />
 
-            <i class="fas fa-cloud-sun"></i>
+            <img class="fa-cloud-sun" src="" id="icon" />
           </div>
           <div class="col-4">
             <span id="humidity"> 57%</span> <br />
@@ -53,9 +55,7 @@
         </div>
 
         <br />
-        <p id="day-time">
-          Today, 13:45
-        </p>
+
         <h4 class="search">
           <form id="search-city">
             <input
@@ -72,12 +72,12 @@
           </form>
         </h4>
 
-        <h2>
+        <h3>
           Weather for the coming days
-        </h2>
+        </h3>
 
         <div class="row" id="coming-days">
-          <div class="col-2">
+          <div class="col-3">
             Fri <br />
             <i class="fas fa-cloud-rain"></i>23°C
           </div>
@@ -92,11 +92,8 @@
           <div class="col-2">
             Mon <br /><i class="fas fa-cloud-rain"></i>20°C
           </div>
-          <div class="col-2">
+          <div class="col-3">
             Tue <br /><i class="fas fa-cloud-showers-heavy"></i>21°C
-          </div>
-          <div class="col-2">
-            Wed <br /><i class="fas fa-cloud-rain"></i>22°C
           </div>
         </div>
       </div>
@@ -107,6 +104,7 @@
         >by Kiki-etta
       </a>
     </p>
+    <script src="https://unpkg.com/axios/dist/axios.min.js" id="axios"></script>
     <script src="script.js"></script>
   </body>
 </html>
