added 3+ hour forecast from API

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2 id="day-time">
           Today, 13:45
         </h2>
-        <img src="src/illustration.png" width="250px" />
+        <img id="main-img" src="src/illustration.png" />
 
         <h3 id="location">
           Amsterdam
@@ -73,29 +73,10 @@
         </h4>
 
         <h3>
-          Weather for the coming days
+          Weather for the coming hours
         </h3>
 
-        <div class="row" id="coming-days">
-          <div class="col-3">
-            Fri <br />
-            <i class="fas fa-cloud-rain"></i>23°C
-          </div>
-          <div class="col-2">
-            Sat <br /><i class="fas fa-cloud-showers-heavy"></i>21°C
-          </div>
-
-          <div class="col-2">
-            Sun<br />
-            <i class="fas fa-cloud-rain"></i>21°C
-          </div>
-          <div class="col-2">
-            Mon <br /><i class="fas fa-cloud-rain"></i>20°C
-          </div>
-          <div class="col-3">
-            Tue <br /><i class="fas fa-cloud-showers-heavy"></i>21°C
-          </div>
-        </div>
+        <div class="row" id="coming-days"></div>
       </div>
     </div>
     <p id="link-text">
