added styling of main row

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="back">
         <h2 id="day-time">
-          Today, 13:45
+          Today
         </h2>
         <img id="main-img" src="src/illustration.png" />
 
@@ -38,19 +38,20 @@
         <div class="row" id="current-day">
           <div class="col-4">
             <span id="main-temp"> 19ºC</span>
-
             <br />
-
             <img class="fa-cloud-sun" src="" id="icon" />
+            temperature
           </div>
           <div class="col-4">
             <span id="humidity"> 57%</span> <br />
-            <i class="fas fa-tint"></i>
+            <i class="fas fa-tint"></i><br />
+            humidity
           </div>
           <div class="col-4">
-            <span id="wind"> 23km/ </span>
+            <span id="wind"></span>
             <br />
-            <i class="fas fa-wind"></i>
+            <i class="fas fa-wind"></i><br />
+            wind speed
           </div>
         </div>
 
